# opencode-sessions

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
openspec/: config.yaml
openspec/changes/archive/2026-06-16-opencode-session-navigator/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-17-root-session-filter/: apply-progress.md  archive-report.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-17-root-session-filter/specs/session-navigator/: spec.md
openspec/specs/session-navigator/: spec.md
src/opencode_session_navigator/: __init__.py  application.py  cli.py  domain.py  text.py  tui.py
src/opencode_session_navigator/infra/: __init__.py  opencode_cli.py  sqlite_repo.py
tests/: test_application.py  test_opencode_cli.py  test_sqlite_repo.py  test_text.py  test_tui.py
