[project]
name = "opencode-session-navigator"
version = "0.1.0"
description = "Navegador TUI para sesiones locales de OpenCode."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "textual>=0.89.1",
]

[project.scripts]
opencode-session-navigator = "opencode_session_navigator.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
